<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".Login.LoginActivity"
    android:id="@+id/screen">

    <ImageView
        android:id="@+id/image_sons"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/guiadeturismo" />

    <android.support.design.widget.TextInputLayout
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_sons">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
               android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:singleLine="false"
        android:hint="@string/hint_email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/labelSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/labelEmail">

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"
        android:inputType="numberPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/labelSenha"
        android:text="@string/btnLogin"
        style="@style/ButtonTheme"
        />


</RelativeLayout>